[gd_scene load_steps=11 format=3 uid="uid://c3q3vrc18ntvh"]

[ext_resource type="Script" uid="uid://d78gjd443dx0" path="res://scripts/achievement_notification.gd" id="1_76id8"]
[ext_resource type="FontFile" uid="uid://cyydyarja1nla" path="res://assets/fonts/chinese rocks rg.otf" id="1_vr16b"]
[ext_resource type="Texture2D" uid="uid://0s7dka2chyk5" path="res://assets/sprites/medal.png" id="2_76id8"]
[ext_resource type="AudioStream" uid="uid://cllaphas5q1ta" path="res://assets/sfx/fanfare.mp3" id="4_q8v6a"]

[sub_resource type="Gradient" id="Gradient_q8v6a"]
offsets = PackedFloat32Array(1)
colors = PackedColorArray(0.31, 0.242575, 0.17050001, 0.8235294)

[sub_resource type="GradientTexture2D" id="GradientTexture2D_l7ukp"]
gradient = SubResource("Gradient_q8v6a")
width = 300

[sub_resource type="Animation" id="Animation_a48r1"]
resource_name = "entry"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 0.25),
"transitions": PackedFloat32Array(1, 3.9999928),
"update": 0,
"values": [Vector2(175, 32), Vector2(-150, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Medal:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0, 0.25, 0.5, 1),
"transitions": PackedFloat32Array(1, 1, 0.6830207, 1),
"update": 0,
"values": [0.0, -1.0471975511965976, 1.0471975511965976, 0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Medal:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0, 0.5),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [-0.5235988, 0.0]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0.25),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [true]
}

[sub_resource type="Animation" id="Animation_gm5xq"]
length = 0.001
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [Vector2(-150, 32)]
}
tracks/1/type = "value"
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/path = NodePath("Sprite2D/Medal:rotation")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [0.0]
}
tracks/2/type = "value"
tracks/2/imported = false
tracks/2/enabled = true
tracks/2/path = NodePath("Sprite2D/Medal:skew")
tracks/2/interp = 1
tracks/2/loop_wrap = true
tracks/2/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 0,
"values": [-0.5235988]
}
tracks/3/type = "value"
tracks/3/imported = false
tracks/3/enabled = true
tracks/3/path = NodePath("AudioStreamPlayer:playing")
tracks/3/interp = 1
tracks/3/loop_wrap = true
tracks/3/keys = {
"times": PackedFloat32Array(0),
"transitions": PackedFloat32Array(1),
"update": 1,
"values": [false]
}

[sub_resource type="Animation" id="Animation_t1kf4"]
resource_name = "exit"
tracks/0/type = "value"
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/path = NodePath("Sprite2D:position")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/keys = {
"times": PackedFloat32Array(0, 1),
"transitions": PackedFloat32Array(1, 1),
"update": 0,
"values": [Vector2(-150, 32), Vector2(-150, -100)]
}

[sub_resource type="AnimationLibrary" id="AnimationLibrary_mgnp1"]
_data = {
&"RESET": SubResource("Animation_gm5xq"),
&"entry": SubResource("Animation_a48r1"),
&"exit": SubResource("Animation_t1kf4")
}

[node name="AchievementNotification" type="Node2D"]
z_index = 500
script = ExtResource("1_76id8")

[node name="Sprite2D" type="Sprite2D" parent="."]
position = Vector2(-150, 32)
texture = SubResource("GradientTexture2D_l7ukp")

[node name="Title" type="Label" parent="Sprite2D"]
texture_filter = 1
offset_left = -118.0
offset_top = -25.0
offset_right = 137.0
offset_bottom = -1.0
theme_override_fonts/font = ExtResource("1_vr16b")
theme_override_font_sizes/font_size = 24
text = "My first extermination"
metadata/_edit_use_anchors_ = true

[node name="Description" type="Label" parent="Sprite2D"]
texture_filter = 1
offset_left = -118.0
offset_top = 4.0
offset_right = 137.0
offset_bottom = 28.0
theme_override_fonts/font = ExtResource("1_vr16b")
text = "Defeat a monster for the first time"
metadata/_edit_use_anchors_ = true

[node name="Medal" type="Sprite2D" parent="Sprite2D"]
position = Vector2(-150, 30)
skew = -0.5235988
texture = ExtResource("2_76id8")
offset = Vector2(0, 7.5)

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
libraries = {
&"": SubResource("AnimationLibrary_mgnp1")
}
autoplay = "entry"

[node name="Timer" type="Timer" parent="."]
wait_time = 3.0
one_shot = true
autostart = true

[node name="AudioStreamPlayer" type="AudioStreamPlayer" parent="."]
stream = ExtResource("4_q8v6a")
volume_db = -10.0

[connection signal="animation_finished" from="AnimationPlayer" to="." method="_on_animation_player_animation_finished"]
[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
